5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4123/executions/1638_2728.log
== TEST (2019-04-09 10:40:13) 
-- CODE:
per = float(input())
tipo = input()
if tipo = "A":
	print(per/8.0)
else:
	print(per/12)
-- ERROR:
File "XXXX", line 3
    if tipo = "A":
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:40:20) 
-- CODE:
per = float(input())
tipo = input()
if tipo == "A":
	print(per/8.0)
else:
	print(per/12)
-- OUTPUT:
5.416666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:40:26) 
-- CODE:
per = float(input())
tipo = input()
if tipo == "A":
	print(per/8.0)
else:
	print(per/12)
-- OUTPUT:
5.416666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:41:03) 
-- CODE:
per = float(input())
tipo = input()
if tipo == "A":
	print(round(per/8.0,2))
else:
	print(round(per/12,2))
-- EXECUTION TIME:
0.186426
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
5.42
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.12
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
